# ostone

./: .env.example  .gitignore  AGENTS.md  LICENSE  README.md  docker-compose.override.yml  docker-compose.yml  lint-staged.config.js  mise.toml  package-lock.json  package.json  pnpm-lock.yaml  render.yaml
backend/: .dockerignore  (+6 more)
ml/: .dockerignore  Dockerfile.cpu  Dockerfile.gpu  Dockerfile.llm  README.md  deploy-airflow.sh  docker-compose.airflow.prod.yml  docker-compose.local-embedder.yml  docker-compose.model-cache.yml  docker-compose.yml  pyproject.toml  sonar-project.properties
ml/airflow/: .env.example  Dockerfile  requirements.txt
ml/airflow/scripts/: init-airflow.sh  (+1 more)
ml/benchmarks/: README.md  validation-activeventure.sample.json  validation-hanacard.sample.json  validation-lguplus.sample.json
ml/dags/: dev_bootstrap.py  dev_replay.py  domain_pack_generation.py  hello_local.py
ml/docker/: llm-entrypoint.sh
ml/schemas/: evaluation-benchmark-suite.schema.json  evaluation-pairwise-benchmark.schema.json  parsed-consultation-dataset.schema.json
ml/scripts/: build_parsed_dataset.py  run_local_pipeline.py
ml/tests/: __init__.py  conftest.py  test_airflow_failure_reporter.py  test_airflow_stage_runner.py  test_artifact_io.py  test_callbacks.py  test_domain_pack_generation_dag.py  test_ecs_embedder_worker.py  test_ecs_gpu_worker.py  test_ecs_run_task_gpu.py  test_ecs_stage_task.py  test_ecs_stage_worker.py  test_gpu_runtime_packaging.py  test_llm_service_lifecycle.py  test_local_embedder_server.py  test_pipeline.py  test_pipeline_common.py  test_runtime.py
(+2949 files in other folders)
