[project]
name = "ml"
version = "0.1.0"
description = "CS Workflow Generation Pipeline"
readme = "README.md"
authors = [
    { name = "kang-heewon", email = "heewon.dev@gmail.com" }
]
requires-python = ">=3.14"
dependencies = []

[build-system]
requires = ["uv_build>=0.11.2,<0.12"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0",
    "pytest-cov>=5.0",
    "ruff>=0.11",
    "mypy>=1.15",
]

[tool.ruff]
line-length = 120
select = ["E", "F", "I", "W"]

[tool.mypy]
python_version = "3.14"
strict = false

[tool.pytest.ini_options]
testpaths = ["tests"]
